Fixed picture alignments

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,7 +93,7 @@ body.dark-theme {
 * {
   box-sizing: border-box;
   padding: 0;
-  margin: 0.5;
+  margin: 1.5;
 }
 
 html {
@@ -290,7 +290,7 @@ img {
 }
 
 .home__blob-img {
-  width: 295px;
+  width: 202px;
 }
 
 .home__data {
